gl51-master/src/test/deca/context/invalid/testObject_rule3_39.deca
//Description
//Erreur de cast


class A {}
class C {}

{
    A a = new A();
    C c = (C) (a); //error A et C n'ont rien en commun
}
//passed

